added my temp logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,9 +23,9 @@
 	<a id="top" name="top"></a>
 	<div id="topmenu">
 				<ul>
-					<li><a href="https://foursquare.com/user/2420270" target="_blank">Foursquare</a></li>
-					<li><a href="http://www.facebook.com/profile.php?id=10219466" target="_blank">Facebook</a></li>
-					<li><a href="https://plus.google.com/110195236192490131079/posts" target="_blank">Google+</a></li>
+					<li><a href="https://foursquare.com/" target="_blank">Foursquare</a></li>
+					<li><a href="http://www.facebook.com/" target="_blank">Facebook</a></li>
+					<li><a href="https://plus.google.com/" target="_blank">Google+</a></li>
                     <li><a href="https://twitter.com/#!/byro" target="_blank">Twitter</a></li>
 				</ul>
 			  
@@ -86,6 +86,7 @@
  <!-- ## these are now covered in the application.html.erb file##
   <script src="public/javascripts/jquery.min.js"></script>
   <script src="public/javascripts/jquery.isotope.min.js"></script> -->
+
 
 
 
