updated header links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,9 +23,9 @@
 	<a id="top" name="top"></a>
 	<div id="topmenu">
 				<ul>
-					<li><a href="https://foursquare.com/" target="_blank">Foursquare</a></li>
+					<li><a href="http://stackoverflow.com/users/747843/" target="_blank">stackoverflow</a></li>
 					<li><a href="http://www.facebook.com/" target="_blank">Facebook</a></li>
-					<li><a href="https://plus.google.com/" target="_blank">Google+</a></li>
+					<li><a href="https://github.com/jonesbb" target="_blank">github</a></li>
                     <li><a href="https://twitter.com/#!/byro" target="_blank">Twitter</a></li>
 				</ul>
 			  
